<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/white"
        android:weightSum="11">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/topBarColor"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/CustomToolbarTheme"
            app:titleTextColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:title="PawPal"
            />

        <!-- Logo del corazón y las patas -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logopawpal"
            android:layout_marginBottom="20dp"
            android:layout_weight="4"
            android:contentDescription="@string/logo_description"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="26dp">

        <!-- Correo -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="emailAddress "
            android:hint="@string/correo"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="40dp"
            android:textColorHint="@color/material_dynamic_neutral50"
            android:textColor="@color/black" />

        <!-- Contraseña -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="password"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="50dp"
            android:textColorHint="@color/material_dynamic_neutral50"
            android:textColor="@color/black"
            />

        <!-- Botón de inicio de sesión -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/login_button_text"
            android:backgroundTint="@color/topBarColor"
            android:textColor="@android:color/holo_blue_dark"
            android:padding="20dp"
            />

        <!-- Texto para registro -->
        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
