<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegistroUsuarioActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Título -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/topBarColor"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/CustomToolbarTheme"
            app:titleTextColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Registro de usuario"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp"
            android:padding="16dp">



            <!-- Correo -->
            <EditText
                android:id="@+id/RegEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:autofillHints="emailAddress "
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral50" />

            <!-- Nombre -->
            <EditText
                android:id="@+id/RegNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:autofillHints="name"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral50" />

            <!-- Fecha de nacimiento -->
            <EditText
                android:id="@+id/RegFechaNacEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_calendar"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/fecha_de_nacimiento"
                android:inputType="date"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral50" />

            <!-- Contraseña -->
            <EditText
                android:id="@+id/RegPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral50" />
            <!-- Contraseña -->
            <EditText
                android:id="@+id/RegPasswordRepeatEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/repetir_contrase_a"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral50" />

            <!-- Botón de registro-->
            <Button
                android:id="@+id/regiserUserButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:backgroundTint="@color/purple_200"
                android:padding="12dp"
                android:text="@string/registrarse"
                android:textColor="@android:color/black" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
